Trivial spec changes
