# docs/swagger.yaml
@@ -357,8 +357,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "204":
+          description: No Content
           schema:
             $ref: '#/definitions/models.User'
         "404":
